Entity Framework Multiple-Result Set
Added AT.Data and a class that allows you to execute multiple IQueryable
entities with a single round trip to the database.

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,19 @@
 *.jar
 *.war
 *.ear
-
 *.suo
-AT.Core/bin/
-AT.Core/obj/
+
+UnitTests/AT.Data.UnitTests/App.config
 TestResults/
+
 UnitTests/AT.Core.UnitTests/bin/
 UnitTests/AT.Core.UnitTests/obj/
+UnitTests/AT.Data.UnitTests/bin/
+UnitTests/AT.Data.UnitTests/obj/
+
+AT.Core/bin/
+AT.Core/obj/
+AT.Data/obj/
+AT.Data/bin/
+
+packages/
