--- a/AT.Core/AT.Core.csproj
+++ b/AT.Core/AT.Core.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Argument.cs" />
     <Compile Include="EventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PropertyMapper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
