--- a/UnitTests/AT.Core.UnitTests/AT.Core.UnitTests.csproj
+++ b/UnitTests/AT.Core.UnitTests/AT.Core.UnitTests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="ArgumentTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PropertyMapperTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\AT.Core\AT.Core.csproj">
