--- a/AT.Core/AT.Core.csproj
+++ b/AT.Core/AT.Core.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Argument.cs" />
     <Compile Include="EventArgs.cs" />
+    <Compile Include="IEnumerableExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyMapper.cs" />
   </ItemGroup>
