--- a/UnitTests/AT.Core.UnitTests/AT.Core.UnitTests.csproj
+++ b/UnitTests/AT.Core.UnitTests/AT.Core.UnitTests.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ArgumentTests.cs" />
+    <Compile Include="IEnumerableExtensionsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyMapperTests.cs" />
   </ItemGroup>
