--- a/AT.Data/AT.Data.csproj
+++ b/AT.Data/AT.Data.csproj
@@ -45,24 +45,28 @@
     <AssemblyOriginatorKeyFile>../../AT-SNK.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\EntityFramework.5.0.0\lib\net40\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.0.1\lib\net40\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.0.1\lib\net40\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Data.Entity" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DbContextExtensions.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IQueryableExtensions.cs" />
+    <Compile Include="MappedDataReader.cs" />
     <Compile Include="MultipleResult.cs" />
+    <Compile Include="MultipleResultMapper.cs" />
     <Compile Include="MultipleResultQuery.cs" />
     <Compile Include="ObjectContextExtensions.cs" />
-    <Compile Include="ParameterExtractorExpressionVisitor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
