--- a/AT.Data/packages.config
+++ b/AT.Data/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="AT.Core" version="1.2.0.0" targetFramework="net40" />
   <package id="EntityFramework" version="6.0.1" targetFramework="net40" />
+  <package id="EntityFramework" version="6.0.0" targetFramework="net40" />
 </packages>
